--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 "scripts": {
   "ng": "ng",
   "start": "node server.js",
-  "build": "ng build --configuration production",
   "build": "ng build --prod",
   "watch": "ng build --watch --configuration development",
   "test": "ng test"
@@ -38,7 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2",
-    "express": "^4.18.2"
+    "typescript": "~5.7.2"
+
   }
 }
